Layout break fix

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -46,8 +46,10 @@
         margin-top: 160px;
     }
 
+    
     .home-text {
         width: 80%;
+        margin: 0;
     }
 
     .home-text h1 {
